<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_remove_red_eye_black_24dp"
            android:title="@string/now_playing" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_live_tv_black_24dp"
            android:title="@string/up_coming" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/favorite" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/search" />
        <item
            android:id="@+id/setting_notification"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/set_notification" />
    </group>

</menu>
