<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <ImageView
        android:layout_width="96dp"
        android:layout_height="106dp"
        android:id="@+id/img_movie"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textJudul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/textViewPadding"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/judul" />

        <TextView
            android:id="@+id/textDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            style="@style/textViewPadding"
            android:text="@string/deskripsi" />

        <TextView
            android:id="@+id/textTerbit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            style="@style/textViewPadding"
            android:text="@string/terbit" />

    </LinearLayout>

</LinearLayout>