<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="8dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:id="@+id/np_img_movie"/>

        <TextView
            android:textColor="@android:color/white"
            android:id="@+id/np_text_judul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/np_img_movie"
            android:layout_toRightOf="@+id/np_img_movie"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/np_text_judul"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:textColor="@android:color/white"
            android:id="@+id/np_text_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/np_text_judul"
            android:layout_alignStart="@+id/np_text_judul"
            android:layout_below="@+id/np_text_judul"
            android:layout_marginTop="20dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/np_text_deskripsi"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/btn_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/selengkapnya"
            style="@style/Widget.AppCompat.Button.Colored"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>
