<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".NotificationActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardCornerRadius="4dp"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_daily_reminder"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_alarm_time"
                    android:text="@string/set_time"
                    android:drawableLeft="@drawable/ic_access_time_black_24dp"
                    android:drawableStart="@drawable/ic_access_time_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_alarm_time"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_set_daily"
                    android:text="@string/btn_active_daily"
                    android:layout_weight="0.5"
                    android:drawableEnd="@drawable/ic_timer_black_24dp"
                    android:drawableRight="@drawable/ic_timer_black_24dp"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_cancel_daily"
                    android:text="@string/btn_unactive_daily"
                    android:layout_weight="0.5"
                    android:drawableEnd="@drawable/ic_timer_off_black_24dp"
                    android:drawableRight="@drawable/ic_timer_off_black_24dp" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_notif_upcoming"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_set_upcoming"
                    android:text="@string/btn_active_daily"
                    android:layout_weight="0.5"
                    android:drawableEnd="@drawable/ic_timer_black_24dp"
                    android:drawableRight="@drawable/ic_timer_black_24dp"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_cancel_upcoming"
                    android:text="@string/btn_unactive_daily"
                    android:layout_weight="0.5"
                    android:drawableEnd="@drawable/ic_timer_off_black_24dp"
                    android:drawableRight="@drawable/ic_timer_off_black_24dp" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>